<resources>
    <string name="app_name">Master 2 SIGL</string>
    <string name="to">to</string>
    <string name="subject">subject\n</string>
    <string name="message">message</string>
    <string name="send">send</string>
    <string name="Annuler">Annuler</string>
    <string name="Valider">Valider</string>
    <string name="Prenoms">Prenoms</string>
    <string name="Name">Name</string>
    <string name="SAISIEM2">SAISIE M2</string>
    <string name="prenoms">Prenoms:</string>
    <string name="Nom">Nom :</string>
    <string name="profession">Profession</string>
    <string name="numero">numero</string>

    <string-array name="historique_post">
        <item>post 1</item>
        <item>post 2</item>
        <item>post 3</item>
        <item>post 4n</item>
        <item>post 5</item>
        <item>post 6</item>
    </string-array>

    <string-array name="contact_items">
        <item>All Contacts</item>
        <item>New Contact</item>
        <item>Edit Contact</item>
        <item>Reinitialize Contact</item>
    </string-array>
</resources>