<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".contact.ContactActivity" >

    <LinearLayout
        android:paddingVertical="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/bleu_400">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60sp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="Btn retour"
            android:contextClickable="true"
            android:onClick="btnRetour"
            app:srcCompat="@drawable/ic_arrow_32"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playpensansregular"
            android:text="Edit Contacts"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/logoSigl"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="Logo"
        app:srcCompat="@drawable/dernier_logo_removebg" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/playpensansbold"
        android:text="Edit Contact"
        android:textColor="@color/black"
        android:textSize="26dp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginBottom="15dp"
            android:text="@string/Nom"
            android:textSize="18sp"
            android:layout_marginEnd="15dp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="15dp"
            android:background="@drawable/border_btn"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="16dp"
            android:fontFamily="@font/playpensansregular"
            android:padding="10sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginBottom="15dp"
            android:text="@string/prenoms"
            android:textSize="18sp"
            android:layout_marginEnd="15dp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/Prenoms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="15dp"
            android:background="@drawable/border_btn"
            android:importantForAutofill="no"
            android:inputType="textLongMessage"
            android:textSize="16sp"
            android:fontFamily="@font/playpensansregular"
            android:padding="10sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/professionShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginBottom="15dp"
            android:text="@string/profession"
            android:textSize="18sp"
            android:layout_marginEnd="15dp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/professionValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="15dp"
            android:background="@drawable/border_btn"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="16dp"
            android:fontFamily="@font/playpensansregular"
            android:padding="10sp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btnAnnuler"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:background="@drawable/btn_hover"
            android:drawableTint="#E6FFFFFF"
            android:text="@string/Annuler"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnValider"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_hover"
            android:text="@string/Valider"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</LinearLayout>